# mapbox

./: .gitignore
_shared/android/: common.gradle
_shared/python/: pyproject.toml  setup.py
_shared/python/qai_hub_apps_utils/: bbox_processing.py  draw.py  image_processing.py  quantization.py  webui.py
_shared/python/qai_hub_apps_utils/requirements/: requirements-draw.txt  requirements-webui.txt
_shared/scripts/: android_utils.sh  apt_utils.sh  load_versions.ps1  load_versions.sh  pip_utils.ps1  pip_utils.sh  python_utils.ps1  python_utils.sh  qairt_utils.ps1  qairt_utils.sh  sudo.sh  versions.env  winget_utils.ps1
chatapp_android/: README.md  build.gradle  info.yaml  install_build.sh  java_errors.txt  kotlin_errors.txt  local.properties  settings.gradle
chatapp_android/_shared/android/: common.gradle
chatapp_android/src/androidTest/java/com/quicinc/chatapp/: ChatAppTest.java
chatapp_android/src/main/: AndroidManifest.xml
chatapp_android/src/main/cpp/: CMakeLists.txt  GenieLib.cpp  GenieWrapper.cpp  GenieWrapper.hpp  PromptHandler.cpp  PromptHandler.hpp
chatapp_android/src/main/java/com/quicinc/chatapp/: ChatMessage.java  Conversation.java  GenieWrapper.java  MainActivity.java  McpSettingsActivity.java  MessageSender.java  Message_RecyclerViewAdapter.java
chatapp_android/src/main/java/com/quicinc/chatapp/location/: HomeAddressManager.java  LocationHelper.java
chatapp_android/src/main/java/com/quicinc/chatapp/mapbox/: MapboxToolRegistry.java  (+1 more)
chatapp_android/src/main/res/layout/: activity_main.xml  activity_settings.xml  chat.xml  chat_row.xml
(+4 files in other folders)
