# Ruff linting and formatting for apps/ (including this package) is configured in
# the root ruff.toml and applied via pre-commit hooks (see .pre-commit-config.yaml,
# "Ruff check (apps)" / "Ruff format (apps)" entries). No ruff config is defined here.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qai-hub-apps-utils"
version = "0.0.1"
authors = [
    {name = "Qualcomm® Technologies, Inc", email = "ai_hub_support@qti.qualcomm.com"},
]
description = "Shared utilities for Qualcomm® AI Hub Apps."
requires-python = ">=3.10"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["qai_hub_apps_utils*"]
